--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <a class="link-button" target="-blank" href="https://www.linkedin.com/in/williamhgates/">Hire me</a>
         </div>
         <div class="half-width">
-            <img src="images/profile.png" alt="">
+            <img src="IMAGES/profile.png" alt="">
         </div>
         
     </section>
     <section class="middle-banner">
         <div class="half-width">
-            <img src="images/profile 2.png" alt="">
+            <img src="IMAGES/profile 2.png" alt="">
         </div>
         <div class="half-width">
             <h3>ABOUT</h3>
@@ -47,19 +47,19 @@
     <section id="project" class="work">
         <h1><span>LASTET</span> WORKING PROJECT</h1>
         <div class="third-width">
-            <img src="images/image 4.png" alt="">
+            <img src="IMAGES/image 4.png" alt="">
             <h4>Power-x-gym (gym website)</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 
 
         </div>
         <div class="third-width">
-            <img src="images/image 5.png" alt="">
+            <img src="IMAGES/image 5.png" alt="">
             <h4>Creative Agency</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="third-width">
-            <img src="images/image 8.png" alt="">
+            <img src="IMAGES/image 8.png" alt="">
             <h4>Hard Rock Music</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
         </div>
@@ -67,19 +67,19 @@
     <section id="achieve" class="certificate work">
         <h1>ACHIEVEMENT </h1>
         <div class="third-width">
-            <img src="images/certificate 1.png" alt="">
+            <img src="IMAGES/certificate 1.png" alt="">
             <h4>Udemy-Java</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 
 
         </div>
         <div  class="third-width"> 
-            <img src="images/certificate 2.png" alt="">
+            <img src="IMAGES/certificate 2.png" alt="">
             <h4>Udemy-php</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="third-width">
-            <img src="images/certificate 3.png" alt="">
+            <img src="IMAGES/certificate 3.png" alt="">
             <h4>Udemy-C</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
         </div>
@@ -97,9 +97,9 @@
             <a target="-blank" href="www.google.com">hello@gesign.com</a>
         </div>
         <div class="logo">
-            <img src="images/image 7.png" alt="">
-            <img src="images/image 6.png" alt="">
-            <img src="images/Group 33059.png" alt="">
+            <img src="IMAGES/image 7.png" alt="">
+            <img src="IMAGES/image 6.png" alt="">
+            <img src="IMAGES/Group 33059.png" alt="">
         </div>
     </section>
     
